dropdown overlaping issue

--- a/apps/web-giddh-admin/src/app/plans/plans-component/plans.component.scss
+++ b/apps/web-giddh-admin/src/app/plans/plans-component/plans.component.scss
@@ -7,6 +7,9 @@
 .page-content {
   padding-bottom: 140px;
 }
+.my-dropdown {
+  right: 0 !important;
+}
 /* .table-height {
   max-height: calc(100vh - 370px);
   overflow-y: auto;
